--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 
 os:
   - linux
-  - osx
+  # - osx # have a look to https://github.com/travis-ci/travis-ci/issues/9744#issuecomment-426916308
 
 before_install:
   - git fetch --tags
