correct apt for apt-get in ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ deploy_zenodo:
     stage: deploy
     script:
         # Step 2. Install dependencies in the image and upload the files to zenodo
-      - apt update
+      - apt-get -y update
       - apt-get install python3
       - apt -y install python3-pip
 
