--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,8 @@
 name: escape_template
 channels:
+  - default
   - conda-forge
 dependencies:
   - numpy
-  - python>=3.6
+  - python>=3.5
+  - requests
