--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,19 +76,18 @@ build_image:
 
 deploy_zenodo:
     stage: deploy
-    image: singularityware/singularity:gitlab-2.6
+    image: python:3.6.11-buster
     dependencies:
       - build_image
     script:
         # 1 - Install dependencies in the image and upload the files to Zenodo
       - apt-get -y update
-      - apt-get install python3
-      - apt-get install wget
-      - apt -y install python3-pip
 
-      - pip3 --version
+        # # python, pip and wget are already installed in the container
+      #- cat /etc/os-release  # Debian GNU/Linux 10 (buster)
+      #- pip3 --version       # pip 20.1.1
+      #- python3 --version    # 3.6.11 as th
       - pip3 install requests
-      - python3 --version  # It is python3.5 - The image is a Debian GNU/Linux 9 (stretch).
 
         # 2 - Get the last tag/release of the repository
       - export REPOSITORY_NAME=template_project_escape
@@ -98,25 +97,25 @@ deploy_zenodo:
 
         # 3 - Download the repository and move it to the build directory
       - >
-        wget -O $REPOSITORY_NAME-"$LAST_RELEASE".zip
-        https://gitlab.in2p3.fr/escape2020/escape/$REPOSITORY_NAME/-/archive/"$LAST_RELEASE"/$REPOSITORY_NAME-"$LAST_RELEASE".zip
+        wget -O $REPOSITORY_NAME-$LAST_RELEASE.zip
+        https://gitlab.in2p3.fr/escape2020/escape/"$REPOSITORY_NAME"/-/archive/"$LAST_RELEASE"/"$REPOSITORY_NAME"-"$LAST_RELEASE".zip
 
-      - mv $REPOSITORY_NAME-"$LAST_RELEASE".zip ./build
+      - mv $REPOSITORY_NAME-$LAST_RELEASE.zip ./build
       - ls ./build
 
       # # 4 - To deploy a NEW DEPOSIT to ZENODO SANDBOX
-      # - >
-      #   python3 .zenodoci/upload_new_deposit.py
-      #   --sandbox_zenodo True
-      #   --input-directory ./build
-      #   --token $SANDBOX_ZENODO_TOKEN
+      #- >
+      #  python3 .zenodoci/upload_new_deposit.py
+      #  --sandbox_zenodo True
+      #  --input-directory ./build
+      #  --token $SANDBOX_ZENODO_TOKEN
 
       # # 4 - To deploy a NEW DEPOSIT to ZENODO
-      # - >
-      #     python3 .zenodoci/upload_new_deposit.py
-      #     --sandbox_zenodo False
-      #     --input-directory ./build
-      #     --token $ZENODO_TOKEN
+      #- >
+      #    python3 .zenodoci/upload_new_deposit.py
+      #    --sandbox_zenodo False
+      #    --input-directory ./build
+      #    --token $ZENODO_TOKEN
 
       # # 4 - To deploy a NEW VERSION to ZENODO: The deposit id of the entry to be `new_versioned` MUST be provided.
       - >
@@ -126,5 +125,6 @@ deploy_zenodo:
           --token $ZENODO_TOKEN
           --deposit_id $DEPOSIT_ID_ESCAPE_TEMPLATE
           --new_deposit_version LAST_RELEASE
+
     only:
       - tags
