--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ build_image:
             - build/Singularity.simg
             - build/Singularity
     only:
-      - master
+      # - master
       - tags
 
 deploy_zenodo:
@@ -80,22 +80,21 @@ deploy_zenodo:
     dependencies:
       - build_image
     script:
-        # 1 - Install dependencies in the image and upload the files to Zenodo
+      # 1 - Install dependencies in the image and upload the files to Zenodo
       - apt-get -y update
 
-        # # python, pip and wget are already installed in the container
+      ### python, pip and wget are already installed in the container
       #- cat /etc/os-release  # Debian GNU/Linux 10 (buster)
       #- pip3 --version       # pip 20.1.1
       #- python3 --version    # 3.6.11 as th
       - pip3 install requests
 
-        # 2 - Get the last tag/release of the repository
+      ### 2 - Get the last tag/release of the repository
       - export REPOSITORY_NAME=template_project_escape
-
       - export REPOSITORY_URL=https://gitlab.in2p3.fr/escape2020/escape/$REPOSITORY_NAME.git
       - export LAST_RELEASE=`git ls-remote --tags --refs --sort="v:refname" $REPOSITORY_URL | tail -n1 | sed 's/.*\///'`
 
-        # 3 - Download the repository and move it to the build directory
+      ### 3 - Download the repository and move it to the build directory
       - >
         wget -O $REPOSITORY_NAME-$LAST_RELEASE.zip
         https://gitlab.in2p3.fr/escape2020/escape/"$REPOSITORY_NAME"/-/archive/"$LAST_RELEASE"/"$REPOSITORY_NAME"-"$LAST_RELEASE".zip
@@ -103,28 +102,27 @@ deploy_zenodo:
       - mv $REPOSITORY_NAME-$LAST_RELEASE.zip ./build
       - ls ./build
 
-      # # 4 - To deploy a NEW DEPOSIT to ZENODO SANDBOX
+      ### 4 - To deploy a NEW DEPOSIT to ZENODO SANDBOX
       #- >
       #  python3 .zenodoci/upload_new_deposit.py
+      #  --token $SANDBOX_ZENODO_TOKEN
       #  --sandbox_zenodo True
       #  --input-directory ./build
-      #  --token $SANDBOX_ZENODO_TOKEN
 
-      # # 4 - To deploy a NEW DEPOSIT to ZENODO
+      ### 4 - To deploy a NEW DEPOSIT to ZENODO
       #- >
       #    python3 .zenodoci/upload_new_deposit.py
+      #    --token $ZENODO_TOKEN
       #    --sandbox_zenodo False
       #    --input-directory ./build
-      #    --token $ZENODO_TOKEN
 
-      # # 4 - To deploy a NEW VERSION to ZENODO: The deposit id of the entry to be `new_versioned` MUST be provided.
+      ### 4 - To deploy a NEW VERSION to ZENODO: The deposit_id of the entry to be `new_versioned` MUST be provided.
       - >
-          python3 .zenodoci/upload_new_version_deposit.py
-          --sandbox_zenodo False
-          --input-directory ./build
-          --token $ZENODO_TOKEN
-          --deposit_id $DEPOSIT_ID_ESCAPE_TEMPLATE
-          --new_deposit_version LAST_RELEASE
+        python3 .zenodoci/upload_new_version_deposit.py
+        --token $ZENODO_TOKEN
+        --sandbox_zenodo False
+        --input-directory ./build
+        --deposit_id $DEPOSIT_ID_ESCAPE_TEMPLATE
 
     only:
       - tags
