--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ build_docker_image:
     # --> The following code snippet IS just an exploratory / WIP section
     - docker save -o ESCAPE_template_project_$LAST_RELEASE.tar $CI_REGISTRY_IMAGE:$LAST_RELEASE
     - ls
-    - mkdir -p build && cp *.tar build
+    - cd .. && mkdir -p build && cp Docker/*.tar build
   artifacts:
     paths:
       - build/ESCAPE_template_project_*.tar
